# core-contract

./: .gitignore  Anchor.toml  README.md  buffer.json  manager.json  owner.json  user.json
programs/core-contract/: Cargo.toml
programs/core-contract/src/: error.rs  lib.rs
programs/core-contract/src/instructions/: add_member.rs  claim.rs  create_team_invoice.rs  create_user_invoice.rs  edit_member.rs  edit_user.rs  init_team.rs  init_user.rs  leave_team.rs  mod.rs  pay_member.rs  pay_team.rs  pay_team_invoice.rs  pay_user.rs  pay_user_invoice.rs  remove_member.rs
programs/core-contract/src/state/: mod.rs  team.rs  team_invoice.rs  team_member.rs  user.rs  user_invoice.rs
programs/core-contract/src/utils/: checks.rs  mod.rs
tests/: team.ts  user.ts
tests/utils/: encode.ts  program.ts  wallets.ts
